# neural-net-playground

./: CMakeLists.txt
src/: NeuralNetwork.cpp  NeuralNetwork.hpp  main.cpp
